--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -12,9 +12,35 @@
     - name: Skapa simulerad enhet
       items:
         - name: TPM
-          href: quick-create-simulated-device.md
+          items:
+            - name: C
+              href: quick-create-simulated-device.md
+            - name: Java
+              href: quick-create-simulated-device-tpm-java.md
+            - name: 'C#'
+              href: quick-create-simulated-device-tpm-csharp.md
+            - name: Python
+              href: quick-create-simulated-device-tpm-python.md
         - name: X.509
-          href: quick-create-simulated-device-x509.md
+          items:
+            - name: C
+              href: quick-create-simulated-device-x509.md
+            - name: Java
+              href: quick-create-simulated-device-x509-java.md
+            - name: 'C#'
+              href: quick-create-simulated-device-x509-csharp.md
+            - name: Python
+              href: quick-create-simulated-device-x509-python.md
+    - name: Registrera enhet
+      items:
+        - name: TPM
+          items:
+            - name: Java
+              href: quick-enroll-device-tpm-java.md
+        - name: X.509
+          items:
+            - name: Java
+              href: quick-enroll-device-x509-java.md
 - name: Självstudier
   items:
     - name: 1 – Konfigurera molnresurser
