--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -9,6 +9,9 @@
   items:
     - name: Börja med interaktiv fråga
       href: ./apache-interactive-query-get-started.md
+    - name: Installera HDInsight-appar
+      href: ../hdinsight-apps-install-applications.md
+      maintainContext: true
     - name: Kapacitetsplanering
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
@@ -90,28 +93,13 @@
         - name: Skapa .NET HDInsight-program med icke-interaktiv autentisering
           href: ../hdinsight-create-non-interactive-authentication-dotnet-applications.md
           maintainContext: true
-    - name: Flera användare (domänansluten)
-      items:
-        - name: Översikt
-          href: ../domain-joined/apache-domain-joined-introduction.md
-          maintainContext: true
-        - name: Planera domänansluten HDInsight
-          href: ../domain-joined/apache-domain-joined-architecture.md
-          maintainContext: true
-        - name: Konfigurera domänansluten HDInsight
-          href: ../domain-joined/apache-domain-joined-configure.md
-          maintainContext: true
-        - name: Konfigurera Hive-principer
-          href: ../domain-joined/apache-domain-joined-run-hive.md
-          maintainContext: true
-        - name: Hantera kluster
-          href: ../domain-joined/apache-domain-joined-manage.md
-          maintainContext: true
     - name: Analysera stordata
       items:
         - name: Analysera med Power Query
           href: ../hadoop/apache-hadoop-connect-excel-power-query.md
           maintainContext: true
+        - name: Ansluta Power BI till interaktiv fråga
+          href: ./apache-hadoop-connect-hive-power-bi-directquery.md
         - name: Ansluta Power BI till Hadoop
           href: ../hadoop/apache-hadoop-connect-hive-power-bi.md
           maintainContext: true
@@ -135,17 +123,11 @@
           maintainContext: true
     - name: Utöka kluster
       items:
-        - name: 'Använda ett säkert, aktiverat lagringskonto'
-          href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-          maintainContext: true
         - name: Anpassa kluster med Bootstrap
           href: ../hdinsight-hadoop-customize-cluster-bootstrap.md
           maintainContext: true
         - name: Anpassa kluster med skriptåtgärd
           href: ../hdinsight-hadoop-customize-cluster-linux.md
-          maintainContext: true
-        - name: Ansluta HDInsight till det lokala nätverket
-          href: ../connect-on-premises-network.md
           maintainContext: true
         - name: Utveckla skriptåtgärder
           href: ../hdinsight-hadoop-script-actions-linux.md
@@ -153,17 +135,11 @@
         - name: Lägga till Hive-bibliotek
           href: ../hdinsight-hadoop-add-hive-libraries.md
           maintainContext: true
-        - name: Använd Virtual Network
-          href: ../hdinsight-extend-hadoop-virtual-network.md
-          maintainContext: true
         - name: Använd Zeppelin
           href: ../hdinsight-apache-spark-zeppelin-notebook.md
           maintainContext: true
         - name: Skapa HDInsight-program
           items:
-            - name: Installera HDInsight-appar
-              href: ../hdinsight-apps-install-applications.md
-              maintainContext: true
             - name: Installera anpassade appar
               href: ../hdinsight-apps-install-custom-applications.md
               maintainContext: true
@@ -257,20 +233,6 @@
         - name: OS-korrigering för HDInsight-kluster
           href: ../hdinsight-os-patching.md
           maintainContext: true
-    - name: Övervaka
-      items:
-        - name: Använda Azure Log Analytics
-          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-          maintainContext: true
-        - name: Klusterspecifika instrumentpaneler
-          href: ../hdinsight-hadoop-oms-log-analytics-management-solutions.md
-          maintainContext: true
-        - name: Använda frågor med Log Analytics
-          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-          maintainContext: true
-        - name: Övervaka klusterprestanda
-          href: ../hdinsight-key-scenarios-to-monitor.md
-          maintainContext: true
     - name: Felsöka
       href: ../hdinsight-troubleshoot-guide.md
       maintainContext: true
@@ -310,6 +272,53 @@
             - name: Optimera Hive-frågor
               href: ../hdinsight-hadoop-optimize-hive-query.md
               maintainContext: true
+- name: Företagsberedskap
+  items:
+    - name: Företagssäkerhet
+      items:
+        - name: "Översikt\r\n"
+          href: ../domain-joined/apache-domain-joined-introduction.md
+          maintainContext: true
+        - name: Planera för företagssäkerhet
+          href: ../domain-joined/apache-domain-joined-architecture.md
+          maintainContext: true
+        - name: Konfigurera företagssäkerhet i HDInsight
+          href: ../domain-joined/apache-domain-joined-configure.md
+          maintainContext: true
+        - name: Konfigurera företagssäkerhet i HDInsight med Azure AD DS
+          href: ../domain-joined/apache-domain-joined-configure-using-azure-adds.md
+          maintainContext: true
+        - name: Konfigurera Hive-principer
+          href: ../domain-joined/apache-domain-joined-run-hive.md
+          maintainContext: true
+        - name: Hantera kluster med företagssäkerhet
+          href: ../domain-joined/apache-domain-joined-manage.md
+          maintainContext: true
+    - name: Skydda data
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+      maintainContext: true
+    - name: Nätverksåtkomst
+      items:
+        - name: HDInsight i ett virtuellt Azure-nätverk
+          href: ../hdinsight-extend-hadoop-virtual-network.md
+          maintainContext: true
+        - name: Ansluta HDInsight till det lokala nätverket
+          href: ../connect-on-premises-network.md
+          maintainContext: true
+    - name: Övervaka med OMS
+      items:
+        - name: Använda Azure Log Analytics
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+          maintainContext: true
+        - name: Klusterspecifika instrumentpaneler
+          href: ../hdinsight-hadoop-oms-log-analytics-management-solutions.md
+          maintainContext: true
+        - name: Använda frågor med Log Analytics
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+          maintainContext: true
+        - name: Övervaka klusterprestanda
+          href: ../hdinsight-key-scenarios-to-monitor.md
+          maintainContext: true
 - name: Referens
   items:
     - name: Kodexempel
