--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -2,7 +2,7 @@
   href: /azure/hdinsight
 - name: Företagssäkerhet
   items:
-    - name: Översikt
+    - name: "Översikt\r\n"
       href: apache-domain-joined-introduction.md
     - name: Planera för domänanslutna kluster
       href: apache-domain-joined-architecture.md
@@ -12,8 +12,6 @@
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Konfigurera Hive-principer
       href: apache-domain-joined-run-hive.md
-    - name: Kapacitetsplanering
-      href: ../hdinsight-capacity-planning.md
       maintainContext: true
     - name: Hantera domänanslutna kluster
       href: apache-domain-joined-manage.md
