--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -1,6 +1,6 @@
 - name: Dokumentation om Azure IoT Edge
   href: index.yml
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Om Azure IoT Edge
       href: how-iot-edge-works.md
@@ -26,8 +26,12 @@
       href: tutorial-deploy-function.md
 - name: Instruktionsguider
   items:
-    - name: Skapa en transparent gateway
-      href: how-to-create-transparent-gateway.md
+    - name: Skapa gatewayer
+      items:
+        - name: Skapa en transparent gateway
+          href: how-to-create-transparent-gateway.md
+        - name: Modbus-gateway
+          href: deploy-modbus-gateway.md
     - name: Distribuera och övervaka i skala
       href: how-to-deploy-monitor.md
     - name: Etablera en IoT Core-enhet
@@ -44,7 +48,7 @@
           href: how-to-vscode-debug-azure-function.md
     - name: Felsöka
       href: troubleshoot.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: IoT Edge-moduler
       href: iot-edge-modules.md
