--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -1,6 +1,6 @@
 - name: Dokumentation för virtuella Linux-datorer
   href: index.yml
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Om Virtual Machines
       href: overview.md
@@ -55,7 +55,7 @@
       href: cli-samples.md
     - name: Azure PowerShell
       href: powershell-samples.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: Azure Resource Manager
       href: ../../azure-resource-manager/resource-group-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
@@ -191,12 +191,14 @@
               href: update-infrastructure-redhat.md
         - name: Virtuell Azure-datoragent
           items:
-            - name: Översikt
+            - name: "Översikt\r\n"
               href: agent-user-guide.md
             - name: Agentuppdatering
               href: update-agent.md
         - name: Planerat underhåll
           href: maintenance-notifications.md
+        - name: Vanliga frågor och svar om accelererat underhåll
+          href: accelerated-maintenance.md
         - name: Schemalagda händelser
           href: scheduled-events.md
         - name: Övervaka metadata
@@ -296,7 +298,7 @@
       items:
         - name: Cloud Foundry
           items:
-            - name: Översikt
+            - name: "Översikt\r\n"
               href: cloudfoundry-get-started.md
             - name: Distribuera din första app
               href: cloudfoundry-deploy-your-first-app.md
@@ -386,6 +388,8 @@
           href: ../../virtual-network/virtual-network-deploy-static-pip-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Använda flera nätverkskort
           href: multiple-nics.md
+        - name: Använda accelererat nätverk
+          href: ../../virtual-network/create-vm-accelerated-networking-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Tilldela offentligt DNS-namn
           href: portal-create-fqdn.md
         - name: DNS-upplösning
