--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -197,6 +197,8 @@
               href: update-agent.md
         - name: Planerat underhåll
           href: maintenance-notifications.md
+        - name: Minimera spekulativ körning
+          href: mitigate-se.md
         - name: Vanliga frågor och svar om accelererat underhåll
           href: accelerated-maintenance.md
         - name: Schemalagda händelser
