--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -1,6 +1,6 @@
 - name: Event Grid
   href: index.yml
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Om Event Grid
       href: overview.md
@@ -24,7 +24,7 @@
       href: resize-images-on-storage-blob-upload-event.md
     - name: Utlösa Automation-runbook
       href: ensure-tags-exists-on-new-virtual-machines.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: Event Grid-begrepp
       href: concepts.md
@@ -36,6 +36,8 @@
   items:
     - name: Strömma data från Event Hubs till informationslager
       href: event-grid-event-hubs-integration.md
+    - name: Mallar för händelseprenumerationer
+      href: event-subscription-template.md
 - name: Referens
   items:
     - name: Azure CLI
