--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -191,6 +191,8 @@
           href: agent-user-guide.md
         - name: Planerat underhåll
           href: maintenance-notifications.md
+        - name: Minimera spekulativ körning
+          href: mitigate-se.md
         - name: Vanliga frågor och svar om accelererat underhåll
           href: accelerated-maintenance.md
         - name: Schemalagda händelser
