--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -1,6 +1,6 @@
 - name: Azure Migrate-dokumentation
   href: index.yml
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Om Azure Migrate
       href: migrate-overview.md
@@ -8,7 +8,7 @@
   items:
     - name: Utforska och utvärdera virtuella VMware-datorer
       href: tutorial-assessment-vmware.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: Utvärderingsberäkningar
       href: concepts-assessment-calculation.md
@@ -22,8 +22,6 @@
       href: how-to-create-a-group.md
     - name: Gruppera datorer med datorberoenden
       href: how-to-create-group-machine-dependencies.md
-    - name: Gruppera datorer med VMware-taggar
-      href: how-to-tag-v-center.md
     - name: Förfina grupper med gruppberoenden
       href: how-to-create-group-dependencies.md
     - name: Anpassa en utvärdering
