--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -1,6 +1,6 @@
 - name: Dokumentation om SQL DB
   href: index.yml
-- name: Översikt
+- name: "Översikt\r\n"
   items:
     - name: Om SQL DB
       href: sql-database-technical-overview.md
@@ -57,7 +57,7 @@
       href: sql-database-cli-samples.md
     - name: Azure PowerShell
       href: sql-database-powershell-samples.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: Tjänstfunktioner
       href: sql-database-servers-databases.md
@@ -279,7 +279,7 @@
         - name: Läs in data med BCP
           href: sql-database-load-from-csv-with-bcp.md
         - name: Läs in data med ADF
-          href: ../data-factory/v1/data-factory-copy-data-from-azure-blob-storage-to-sql-database.md
+          href: ../data-factory/connector-azure-sql-database.md
         - name: Synkronisera data
           href: sql-database-get-started-sql-data-sync.md
     - name: Övervaka och finjustera
