--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -1,6 +1,6 @@
 - name: Dokumentation om Machine Learning Studio
   href: index.md
-- name: Översikt
+- name: "Översikt\r\n"
   expanded: true
   items:
     - name: Vad är Machine Learning?
@@ -69,7 +69,7 @@
       items:
         - name: Importera utbildningsdata
           items:
-            - name: Översikt
+            - name: "Översikt\r\n"
               href: import-data.md
             - name: Från en lokal fil
               href: import-data-from-local-file.md
@@ -119,7 +119,7 @@
                   href: execute-python-scripts.md
     - name: Operationalisera modeller
       items:
-        - name: Översikt
+        - name: "Översikt\r\n"
           href: deploy-consume-web-service-guide.md
         - name: Distribuera modeller
           items:
@@ -149,7 +149,7 @@
               href: scaling-webservice.md
         - name: Omtrimningsmodeller
           items:
-            - name: Översikt
+            - name: "Översikt\r\n"
               href: retrain-machine-learning-model.md
             - name: Omtrimma programmässigt
               href: retrain-models-programmatically.md
@@ -163,7 +163,7 @@
               href: troubleshooting-retraining-models.md
         - name: Förbrukningsmodeller
           items:
-            - name: Översikt
+            - name: "Översikt\r\n"
               href: consume-web-services.md
             - name: Använda Excel
               href: consuming-from-excel.md
@@ -195,9 +195,9 @@
       href: web-service-error-codes.md
 - name: Relaterat
   items:
-    - name: Cortana Intelligence-galleri
+    - name: Azure AI-galleriet
       items:
-        - name: Översikt
+        - name: "Översikt\r\n"
           href: gallery-how-to-use-contribute-publish.md
         - name: Branscher
           href: gallery-industries.md
