--- a/articles/log-analytics/toc.yml
+++ b/articles/log-analytics/toc.yml
@@ -25,7 +25,7 @@
   items:
     - name: Azure PowerShell
       href: powershell-samples.md
-- name: Koncept
+- name: Begrepp
   items:
     - name: Uppgradering av arbetsyta
       items:
@@ -73,8 +73,6 @@
               href: log-analytics-sccm.md
             - name: OMS-gateway
               href: log-analytics-oms-gateway.md
-            - name: Felsökning av Linux-agent
-              href: log-analytics-agent-linux-support.md
         - name: Datakällor
           items:
             - name: Översikt över datakällor
@@ -99,6 +97,8 @@
               href: log-analytics-data-sources-custom-logs.md
             - name: Anpassade fält
               href: log-analytics-custom-fields.md
+            - name: API för datainsamling
+              href: log-analytics-data-collector-api.md
     - name: Frågedata
       items:
         - name: Språkdokumentation
@@ -148,7 +148,7 @@
           items:
             - name: OMS-portalen
               href: log-analytics-alerts-creating.md
-            - name: REST API
+            - name: REST-API
               href: log-analytics-api-alerts.md
             - name: Resource Manager-mall
               href: ../operations-management-suite/operations-management-suite-solutions-resources-searches-alerts.md
@@ -164,15 +164,25 @@
           href: log-analytics-manage-cost-storage.md
         - name: Ta bort en arbetsyta
           href: log-analytics-manage-del-workspace.md
+    - name: Felsöka
+      items:
+        - name: Felsök tillägg för virtuella dator
+          href: log-analytics-azure-vmext-troubleshoot.md
+        - name: Felsökning av Linux-agent
+          href: log-analytics-agent-linux-support.md
     - name: Använd lösningar
       items:
         - name: Översikt över lösningar
           href: log-analytics-add-solutions.md
         - name: Mållösningar
           href: ../operations-management-suite/operations-management-suite-solution-targeting.md?toc=%2fazure%2flog-analytics%2ftoc.json
-        - name: Aktivitetslogganalys
-          href: log-analytics-activity.md
-        - name: AD-hälsokontroll
+        - name: Azure-aktivitetsloggar
+          items:
+            - name: Analys
+              href: log-analytics-activity.md
+            - name: Samla in i olika prenumerationer
+              href: log-analytics-activity-logs-subscriptions.md
+        - name: AD-bedömning
           href: log-analytics-ad-assessment.md
         - name: AD-replikeringsstatus
           href: log-analytics-ad-replication-status.md
@@ -244,8 +254,6 @@
           href: log-analytics-wire-data.md
     - name: Utveckla
       items:
-        - name: API för datainsamling
-          href: log-analytics-data-collector-api.md
         - name: PowerShell-cmdletar
           href: log-analytics-powershell-workspace-configuration.md
         - name: Mallar för Resurshanteraren
